# himpapawid

./: .gitignore  CMakeLists.txt  FindSDL2.cmake  FindSDL2_image.cmake
android/app/jni/: CMakeLists.txt  SDL_image  SDL_ttf
android/app/jni/src/: Android.mk  CMakeLists.txt  include  src
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/ferdinandsilva/himpapawid/: HimpapawidGame.java
android/app/src/main/res/values/: ic_launcher_background.xml  strings.xml
include/: game.h  misc.h  sound.h  sprite.h
ios/Himpapawid/: game.c  game.h  main.c  misc.c  misc.h
ios/Himpapawid.xcodeproj/: project.pbxproj
ios/Himpapawid/Base.lproj/: LaunchScreen.storyboard
ios/HimpapawidTests/: HimpapawidTests.m
ios/HimpapawidUITests/: HimpapawidUITests.m  HimpapawidUITestsLaunchTests.m
src/: game.c  main.c  misc.c  sound.c  sprite.c
